# claude-code-yolo

./: .gitignore  CLAUDE.md  README.md  README.zh-CN.md  claude-yolo-automate  claude-yolo-flutter-docker.sh  claude-yolo-py-docker.sh  claude-yolo-raw.sh  install.ps1  install.sh
.github/workflows/: build.yml
docs/superpowers/plans/: 2026-04-28-sandbox-subcommand-block-implementation.md
docs/superpowers/specs/: 2026-04-28-sandbox-subcommand-block-design.md
flutter/: claude-yolo-flutter-docker.sh  sandbox-flutter.sh
python/: claude-yolo-py-docker.sh  claude_code_py.Dockerfile  sandbox-python.sh
ultra-sandbox/: README.md  claude-yolo-base-docker.sh  claude_code_base.Dockerfile  install.sh  ultra-sandbox.Dockerfile  ultra-sandbox.sh
ultra-sandbox/.ultra_sandbox/: adb  flutter  podman
ultra-sandbox/sandbox/: go.mod  go.sum  main.go
ultra-sandbox/sandbox-rs/: Cargo.toml
ultra-sandbox/sandbox-rs/src/: main.rs
